unify/unifi-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: unifi
  labels:
    name: home
