unify/unifi-db_headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-db  # Specifies the name of the Service
  namespace: unifi
spec:
  ports:
    - name: mongo  # Specifies the name of the port
      port: 27017  # Specifies the port number
      targetPort: 27017  # Specifies the target port on the pods
  clusterIP: None  # Specifies that no cluster IP is assigned (Headless Service)
  selector:
    app: unifi-db  # Selects pods with the label "app: mongo"
