unify/unifi-net-app-statefulset.yml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: unifi-ctrl
  namespace: unifi
spec:
  serviceName: "unifi"
  replicas: 1
  selector:
    matchLabels:
      name: unifi-ctrl
  template:
    metadata:
      name: unifi-ctrl
      labels:
        name: unifi-ctrl
    spec:
      containers:
        - name: unifi-ctrl
          image: 'lscr.io/linuxserver/unifi-network-application:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 10001
              protocol: UDP              
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8843
              protocol: TCP
            - containerPort: 8880
              protocol: TCP
            - containerPort: 6789
              protocol: TCP
          volumeMounts:
            - name: lh-unifi-01-volume
              mountPath: /config
      volumes:
        - name: lh-unifi-01-volume
          persistentVolumeClaim:
            claimName: lh-unifi-01-volume-claim
        # - name: mongodb-init-sh
        #   configMap:
        #     name: mongodb-init-sh
  # volumeClaimTemplates:
  #   - metadata:
  #       name: lh-unifi-01-volume-claim
  #     spec:
  #       accessModes: ["ReadWriteOnce"]
  #       resources:
  #         requests:
  #           storage: 5Gi
---
kind: Service
apiVersion: v1
metadata:
  name: lb-unifi
  namespace: unifi
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https # Set backend is HTTPS
    traefik.ingress.kubernetes.io/service.serverstransport: self-signed-transport@kubernetescrd
spec:
  ports:
    - name: '8080'
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: '8443'
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: '8843'
      protocol: TCP
      port: 8843
      targetPort: 8843
    - name: '8880'
      protocol: TCP
      port: 8880
      targetPort: 8880
    - name: '6789'
      protocol: TCP
      port: 6789
      targetPort: 6789
    - name: '3478'
      protocol: UDP
      port: 3478
      targetPort: 3478
    - name: '10001'
      protocol: UDP
      port: 10001
      targetPort: 10001
  selector:
    name: unifi-ctrl
  type: LoadBalancer
  loadBalancerIP: 10.0.51.102
# ---  
# kind: Service
# apiVersion: v1
# metadata:
#   name: lb-unifi-udp
#   namespace: unifi
#   # annotations:
#   #   metallb.universe.tf/allow-shared-ip: 'true'
# spec:
#   ports:
#     - name: '3478'
#       protocol: UDP
#       port: 3478
#       targetPort: 3478
#     - name: '10001'
#       protocol: UDP
#       port: 10001
#       targetPort: 10001
#   selector:
#     name: unifi-ctrl
#   type: LoadBalancer
#   loadBalancerIP: 10.0.51.102
