unify/unifi-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-ingress
  namespace: unifi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/tls: "true"
spec:
  rules:
    - host: unifi.48340.xyz
      http:
        paths:
          - backend:
              service:
                port:
                  number: 8443
                name: unifi-ctrl
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - unifi.48340.xyz
      secretName: unifi-tls
  ingressClassName: traefik
